Bug fixed overflow hideen

--- a/css/main.sass
+++ b/css/main.sass
@@ -52,6 +52,7 @@ section
 
 .tabuleiro
   position: relative
+  overflow: hidden
   @media screen and (min-width: 800px) // desktop
     width: 820px
     height: 700px
